<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_and_notif_view_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:paddingBottom="@dimen/medium"
        android:theme="@style/AccentBlue"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_search_and_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_input_text"
            android:inputType="textShortMessage"
            android:theme="@style/AccentBlue" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/begin_date_label"
        android:labelFor="@id/begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date_text"
        android:layout_marginTop="@dimen/small"
        android:layout_marginStart="@dimen/x_small"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"/>

    <TextView
        android:id="@+id/end_date_label"
        android:labelFor="@id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date_text"
        android:layout_marginStart="@dimen/x_small"
        android:layout_marginTop="@dimen/small"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="@id/end_date"/>

    <EditText
        android:id="@+id/begin_date"
        android:inputType="date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@id/guideline_middle" />

    <EditText
        android:id="@+id/end_date"
        android:inputType="date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_middle"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"/>

    <CheckBox
        android:id="@+id/checkboxScience"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:onClick="onCheckboxClicked"
        app:layout_constraintTop_toBottomOf="@id/begin_date"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:text="@string/checkbox_science_text" />

    <CheckBox
        android:id="@+id/checkboxHealth"
        android:layout_width="0dp"
        android:onClick="onCheckboxClicked"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkboxScience"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:text="@string/checkbox_health_text" />

    <CheckBox
        android:id="@+id/checkboxWorld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        app:layout_constraintTop_toBottomOf="@id/checkboxHealth"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:text="@string/checkbox_world_text" />

    <CheckBox
        android:id="@+id/checkboxTechnology"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintTop_toBottomOf="@id/begin_date"
        app:layout_constraintStart_toStartOf="@id/guideline_middle"
        android:text="@string/checkbox_technology_text" />

    <CheckBox
        android:id="@+id/checkboxFinancial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        app:layout_constraintTop_toBottomOf="@id/checkboxTechnology"
        app:layout_constraintStart_toStartOf="@id/guideline_middle"
        android:text="@string/checkbox_financial_text" />

    <CheckBox
        android:id="@+id/checkboxEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        app:layout_constraintTop_toBottomOf="@id/checkboxFinancial"
        app:layout_constraintStart_toStartOf="@id/guideline_middle"
        android:text="@string/checkbox_education_text" />

    <Button
        android:id="@+id/search_frag_button"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkboxWorld"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:layout_marginTop="@dimen/large_xx"
        android:background="@drawable/custom_background_search_button"
        android:textColor="@drawable/custom_text_color_search_button"
        android:text="@string/search_button_text"/>

    <Switch
        android:visibility="gone"
        android:id="@+id/notification_frag_switch"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notification_switch_text"
        android:layout_marginTop="@dimen/x_large"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/checkboxWorld"
        android:theme="@style/AccentBlue"/>

    <android.support.constraint.Group
        android:id="@+id/search_group_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="begin_date, end_date, begin_date_label, end_date_label, search_frag_button"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.53" />

</android.support.constraint.ConstraintLayout>